Fix: update supplier filter layout to use grid for better alignment and spacing

--- a/backend/src/assets/css/supplier-filter.css
+++ b/backend/src/assets/css/supplier-filter.css
@@ -10,16 +10,17 @@ div.supplier-filter ul.supplier-list {
   margin: 15px 0 0;
   padding: 0;
   width: 100%;
-  display: flex;
-  flex-wrap: wrap;
+  /* display: flex;
+  flex-wrap: wrap; */
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 div.supplier-filter ul.supplier-list li {
   margin-bottom: 12px;
   /* margin-left: 15px;
   margin-right: 5px; */
-  margin-left: 30px;
-  margin-right: 15px;
+  margin-bottom: 8px;
   display: flex;
   flex-direction: row;
   justify-content: center;
